--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstyles.css"/>
+    <link rel="stylesheet" href="/assets/css/Ecomaxstylesq.css" />
 </head>
 
 <body>
@@ -98,9 +98,28 @@
                                     <li class="m-2">
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
-                                    <li class="m-2">
-                                        <a href="collections/">PRODUCTS</a>
-                                    </li>
+                                    <li class="dropdown-products-res ms-2">
+                                
+                                        <div class="accordion" id="accordionExample">
+                                            <button
+                                                class="accordion d-flex Fueling-text justify-content-between col-12">
+                                                <span> PRODUCTS</span>
+                                            </button>
+                                            <div class="panel1">
+                                                <div class="accordion-body p-0">
+                                                    <ul class="dropdown-menu-products-res">
+                                                        <li>
+                                                            <a href="/collections/">AUTOMOTIVE</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="/industrial/">INDUDTRIAL</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                 
+                                </li>
 
                                     <li class="m-2">
                                         <a href="about.html">ABOUT US </a>
@@ -342,7 +361,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-12 col-xl-6 d-flex flex-wrap justify-content-between">
+                    <div class="col-12 col-xl-6 count-carsd d-flex flex-wrap justify-content-between">
                         <div class=" count-card after-befor">
                             <div class="col-12 about-cout justify-content-center flex-wrap">
                                 <div class="cout cout-box d-flex justify-content-center bg-white ">
