--- a/industrial_products/index.html
+++ b/industrial_products/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstyles.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomaxstylesq.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
@@ -53,9 +53,18 @@
                             <li>
                                 <a href="/">HOME</a>
                             </li>
-                            <li>
-                                <a href="/collections/" class="text-success">PRODUCTS</a>
-
+                            <li class="dropdown-products">
+                                <a href="#">
+                                    PRODUCTS
+                                </a>
+                                <ul class="dropdown-menu-products">
+                                    <li class="border-bottom">
+                                        <a href="/collections/">AUTOMOTIVE</a>
+                                    </li>
+                                    <li>
+                                        <a href="/industrial/">INDUDTRIAL</a>
+                                    </li>
+                                </ul>
                             </li>
 
                             <li>
@@ -95,9 +104,28 @@
                                     <li class="m-2">
                                         <a href="/">HOME</a>
                                     </li>
-                                    <li class="m-2">
-                                        <a href="/collections/" class="text-success">PRODUCTS</a>
-                                    </li>
+                                    <li class="dropdown-products-res ms-2">
+                                
+                                        <div class="accordion" id="accordionExample">
+                                            <button
+                                                class="accordion d-flex Fueling-text justify-content-between col-12">
+                                                <span> PRODUCTS</span>
+                                            </button>
+                                            <div class="panel1">
+                                                <div class="accordion-body p-0">
+                                                    <ul class="dropdown-menu-products-res">
+                                                        <li>
+                                                            <a href="/collections/">AUTOMOTIVE</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="/industrial/">INDUDTRIAL</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                 
+                                </li>
 
                                     <li class="m-2">
                                         <a href="/about.html">ABOUT US </a>
