--- a/collections/index.html
+++ b/collections/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
 
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylesq.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomaxstylesa.css" />
 
 
 
@@ -165,7 +165,7 @@
                         Experience the difference with Ecomax, where precision meets versatility for engines of all
                         types, ensuring smooth operation and prolonged endurance, every time.</p>
                 </div>
-                <div class="col-12 d-flex flex-wrap p-0 Lubricants-products" id="contentDiv">
+                <div class="col-12 d-flex flex-wrap p-0  Lubricants-gap" id="contentDiv">
 
                 </div>
 
@@ -435,7 +435,7 @@
 
             const collectionThumbHTML = ({ url, img, title }) =>
                 `
-                <div class="products">
+                <div class="col-12 col-md-6  produt   col-lg-4">
                         <a href="${url}">
                             <div class="products-img">
                                 <img src="${img}"
