--- a/industrial/index.html
+++ b/industrial/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylesq.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomaxstylesa.css" />
 </head>
 
 
@@ -193,8 +193,8 @@
                         Explore our comprehensive range of industrial lubricants designed to enhance efficiency, reliability and longevity of your machinery.
                     </p>
                 </div>
-                <div class="col-12 d-flex flex-wrap p-0 Lubricants-products">
-                    <div class="products">
+                <div class="col-12 d-flex flex-wrap p-0  Lubricants-gap">
+                    <div class="col-12 col-md-6  produt   col-lg-4">
                         <a href="/industrial_products/index.html">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
@@ -212,7 +212,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="products">
+                    <div class="col-12 col-md-6  produt  col-lg-4">
                         <a href="/industrial_products/index.html">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
@@ -230,7 +230,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="products">
+                    <div class="col-12 col-md-6  produt col-lg-4">
                         <a href="#">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
@@ -248,7 +248,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="products">
+                    <div class="col-12 col-md-6 produt   col-lg-4">
                         <a href="#">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
@@ -266,7 +266,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="products">
+                    <div class="col-12 col-md-6  produt  col-lg-4">
                         <a href="#">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
@@ -284,7 +284,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="products">
+                    <div class="col-12 col-md-6  produt  col-lg-4">
                         <a href="#">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
@@ -302,7 +302,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="products">
+                    <div class="col-12  col-md-6  produt  col-lg-4">
                         <a href="#">
                             <div class="products-img">
                                 <img src="/assets/images/industrial/Ecosynth 610.png"
