--- a/collections/index.html
+++ b/collections/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
 
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylesa.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomaxstylesm.css" />
 
 
 
@@ -435,7 +435,7 @@
 
             const collectionThumbHTML = ({ url, img, title }) =>
                 `
-                <div class="col-12 col-md-6  produt   col-lg-4">
+                <div class="col-12 col-md-6 products produt   col-lg-4">
                         <a href="${url}">
                             <div class="products-img">
                                 <img src="${img}"
