--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylesm.css" />
+    <link rel="stylesheet" href="/assets/css/Ecomaxstylecss.css" />
 
 </head>
 
@@ -530,7 +530,6 @@
                         </a>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -610,7 +609,7 @@
                     </div>
                     <div class="col-12 col-xxl-6">
                         <div class="col-12 d-flex Global-box d-flex justify-content-center flex-wrap ">
-                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab  counter d-flex justify-content-center align-items-center flex-column ">
@@ -619,7 +618,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -628,7 +627,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
@@ -637,7 +636,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cout col-12 col-md-5 d-flex justify-content-center bg-white ">
+                            <div class="cout Excellence_cout col-12 col-md-5 d-flex justify-content-center bg-white ">
                                 <div class="d-flex counter1 justify-content-center align-items-center">
                                     <div
                                         class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
