--- a/industrial/index.html
+++ b/industrial/index.html
@@ -194,7 +194,7 @@
                     </h1>
                     <p class="text-center Lubricants-text">
                         Explore our comprehensive range of industrial lubricants designed to enhance efficiency,
-                        reliability and longevity of your machinery.11
+                        reliability and longevity of your machinery.
                     </p>
                 </div>
             
