--- a/industrial_products/index.html
+++ b/industrial_products/index.html
@@ -637,7 +637,7 @@
         document.addEventListener("DOMContentLoaded", async () => {
             loadJS([
                 "/assets/JS/script.js",
-                "/assets/JS/dbb.js"
+                "/assets/JS/db.js"
             ]);
 
             const getThumbURL = (type, slug, collectionSlug = null) => {
