--- a/collections/index.html
+++ b/collections/index.html
@@ -427,7 +427,7 @@
         $(document).ready(function () {
             loadJS([
                 "/assets/JS/script.js",
-                "/assets/JS/db.js"
+                "/assets/JS/db-and-industrial.js"
             ]);
 
 
