--- a/products/index.html
+++ b/products/index.html
@@ -666,7 +666,7 @@
             $(document).ready(function () {
                 loadJS([
                     "/assets/JS/script.js",
-                    "/assets/JS/db.js"
+                    "/assets/JS/db-and-industrial.js"
                 ]);
 
                 const collectionThumbHTML = ({ url, img, title }) =>
