--- a/industrial/index.html
+++ b/industrial/index.html
@@ -442,7 +442,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
     loadJS([
         "/assets/JS/script.js",
-        "/assets/JS/db.js"
+        "/assets/JS/db-and-industrial.js"
     ]);
 
     const getThumbURL = (type, slug, collectionSlug = null) => {
