industrial product page complit

--- a/collections/index.html
+++ b/collections/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylecss.css" />
+    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
 
 
 
@@ -217,7 +217,10 @@
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="/collections/"
-                                            class="link-light text-decoration-none text-success1">Products</a>
+                                            class="link-light text-decoration-none text-success1">Automotive Products</a>
+                                    </li>
+                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                        <a href="/industrial/" class="link-light text-decoration-none">Industrial Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -247,11 +250,15 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/" class="link-light text-decoration-none ">Home</a>
+                                                <a href="/"
+                                                    class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/collections/"
-                                                    class="link-light text-decoration-none text-success1">Products</a>
+                                                <a href="collections/"
+                                                    class="link-light text-decoration-none text-success1">Automotive Products</a>
+                                            </li>
+                                            <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
+                                                <a href="#" class="link-light text-decoration-none">Industrial Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -378,7 +385,6 @@
                                                         Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155
                                                     </p>
                                                 </div>
-
                                             </li>
                                         </ul>
                                     </div>
