--- a/industrial/index.html
+++ b/industrial/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylecss.css" />
+    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
 </head>
 
 
@@ -198,7 +198,7 @@
                     </p>
                 </div>
                 <div class="col-12 d-flex flex-wrap p-0  Lubricants-gap text-white justify-content-between" id="industrial_products">
-                  
+                   
                 </div>
             </div>
         </div>
@@ -238,7 +238,10 @@
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="/collections/"
-                                            class="link-light text-decoration-none text-success1">Products</a>
+                                            class="link-light text-decoration-none ">Automotive Products</a>
+                                    </li>
+                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                        <a href="/industrial/" class="link-light text-decoration-none text-success1">Industrial Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -268,11 +271,15 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/" class="link-light text-decoration-none ">Home</a>
+                                                <a href="/"
+                                                    class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/collections/"
-                                                    class="link-light text-decoration-none text-success1">Products</a>
+                                                <a href="collections/"
+                                                    class="link-light text-decoration-none ">Automotive Products</a>
+                                            </li>
+                                            <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
+                                                <a href="#" class="link-light text-decoration-none text-success1">Industrial Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
