--- a/contactus.html
+++ b/contactus.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png"/>
-  <link rel="stylesheet" href="/assets/css/Ecomaxstylecss.css" />
+  <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
 
   <style>
     #chartdiv {
@@ -333,7 +333,10 @@
                     <a href="/" class="link-light text-decoration-none ">Home</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <a href="collections/" class="link-light text-decoration-none">Products</a>
+                    <a href="collections/" class="link-light text-decoration-none">Automotive Products</a>
+                  </li>
+                  <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                    <a href="industrial/" class="link-light text-decoration-none">Industrial Products</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                     <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -361,18 +364,23 @@
                   <div class="accordion-body">
                     <ul class="list-group list-group-laine footer-hover">
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="/" class="link-light text-decoration-none ">Home</a>
+                          <a href="/"
+                              class="link-light text-decoration-none text-success1">Home</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="collections/" class="link-light text-decoration-none">Products</a>
+                          <a href="collections/"
+                              class="link-light text-decoration-none">Automotive Products</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="#" class="link-light text-decoration-none">Brochure</a>
+                          <a href="#" class="link-light text-decoration-none">Industrial Products</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="#" class="link-light text-decoration-none">Gallery</a>
+                          <a href="#" class="link-light text-decoration-none">Brochure</a>
                       </li>
-                    </ul>
+                      <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
+                          <a href="#" class="link-light text-decoration-none">Gallery</a>
+                      </li>
+                  </ul>
                   </div>
                 </div>
               </div>
