--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylecss.css" />
+    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
 
 </head>
 
@@ -692,7 +692,10 @@
                                         <a href="/" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="collections/" class="link-light text-decoration-none">Products</a>
+                                        <a href="collections/" class="link-light text-decoration-none">Automotive Products</a>
+                                    </li>
+                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                        <a href="industrial/" class="link-light text-decoration-none">Industrial Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -725,7 +728,10 @@
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="collections/"
-                                                    class="link-light text-decoration-none">Products</a>
+                                                    class="link-light text-decoration-none">Automotive Products</a>
+                                            </li>
+                                            <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
+                                                <a href="#" class="link-light text-decoration-none">Industrial Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
