--- a/products/index.html
+++ b/products/index.html
@@ -21,7 +21,7 @@
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/Ecomaxstylecss.css" />
+    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
 
 </head>
 
@@ -467,7 +467,10 @@
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="/collections/"
-                                            class="link-light text-decoration-none text-success1">Products</a>
+                                            class="link-light text-decoration-none text-success1">Automotive Products</a>
+                                    </li>
+                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                        <a href="#" class="link-light text-decoration-none">Industrial Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -494,11 +497,15 @@
                                     <div class="accordion-body">
                                         <ul class="list-group list-group-laine footer-hover">
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/" class="link-light text-decoration-none ">Home</a>
+                                                <a href="/"
+                                                    class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/collections/"
-                                                    class="link-light text-decoration-none text-success1">Products</a>
+                                                <a href="collections/"
+                                                    class="link-light text-decoration-none text-success1">Automotive Products</a>
+                                            </li>
+                                            <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
+                                                <a href="#" class="link-light text-decoration-none">Industrial Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
