--- a/products/index.html
+++ b/products/index.html
@@ -21,7 +21,7 @@
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css" />
+    <link rel="stylesheet" href="/assets/css/ecomax__style.css" />
 
 </head>
 
@@ -172,7 +172,7 @@
                             </div>
                           </div>
                           <div thumbsSlider="" class="swiper product_swiper " >
-                            <div class=" swiper-wrapper mb-0 product-sab-images text-white" id="data-images_mini" >
+                            <div class=" swiper-wrapper mb-0 product-sab-images text-white imag-mini" id="data-images_mini" >
                              
                             </div>
                           </div>
