--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/ecomax__style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 
 </head>
 
