--- a/career.html
+++ b/career.html
@@ -16,24 +16,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
     <link rel="stylesheet" href="/assets/css/style.css" />
-
 </head>
 
 <body>
     <a href="#top">
         <div class="scrollbar back d-none">
-        <i class="fa-solid fa-arrow-up-long back-top "></i>
+            <i class="fa-solid fa-arrow-up-long back-top "></i>
         </div>
     </a>
     <!-- Navbar Start -->
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
-
             </div>
         </div>
     </div>
-
     <!-- Start: header -->
     <section class="header header-xs header-sm header-md header-lg">
         <div class="container1">
@@ -61,7 +58,6 @@
                                     </li>
                                 </ul>
                             </li>
-
                             <li>
                                 <a href="about.html">ABOUT US </a>
                             </li>
@@ -74,13 +70,10 @@
                         </ul>
                     </div>
                     <div class="col-1 d-flex justify-content-center d-lg-none ">
-
-
                         <div data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                             aria-controls="offcanvasScrolling">
                             <i class="fa-solid fa-bars-staggered"></i>
                         </div>
-
                         <div class="offcanvas w-100 offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false"
                             tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
                             <div class="offcanvas-header">
@@ -100,7 +93,6 @@
                                         <a href="/">HOME</a>
                                     </li>
                                     <li class="dropdown-products-res ms-2">
-                                
                                         <div class="accordion" id="accordionExample">
                                             <button
                                                 class="accordion d-flex Fueling-text justify-content-between col-12">
@@ -119,9 +111,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                 
-                                </li>
-
+                                    </li>
                                     <li class="m-2">
                                         <a href="about.html">ABOUT US </a>
                                     </li>
@@ -134,7 +124,6 @@
                                 </ul>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -158,32 +147,36 @@
             </div>
             <div class="row p-0 image_with_form_container align-items-center">
                 <div class="col-12 pe-0 form_container order-1 order-sm-0 col-sm-7 ">
-                    <form class="form_container_in">
+                    <form class="form_container_in" >
                         <div class="row form_field_container flex-column flex-sm-row ">
                             <div class="col">
-                                <input type="text" name="name" placeholder="First Name*" class="form-control field"
+                                <input type="text" name="name" id="customer_first_name" placeholder="First Name*" class="form-control field"
                                     aria-label="First name" required>
+                                    <p class="text-danger" id="customer_fname"></p>
                             </div>
                             <div class="col ">
-                                <input type="text" name="email" placeholder="Last Name*" class="form-control field"
-                                    aria-label="First name" required>
+                                <input type="text" name="name" id="customer_last_name"  placeholder="Last Name*" class="form-control field"
+                                    aria-label="Last name" required>
+                                    <p class="text-danger" id="customer_lname"></p>
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
                             <div class="col ">
-                                <input type="email" name="phone_number" placeholder="Email*" required
+                                <input type="email" name="email" id="customer_email" placeholder="Email*" required
                                     class="field form-control">
+                                    <p class="text-danger" id="customer_email_w"></p>
                             </div>
                             <div class="col ">
-                                <input type="number" name="role" placeholder="Phone Number*" required
+                                <input type="number" name="number" id="customer_number" placeholder="Phone Number*" required
                                     class="field form-control">
+                                    <p class="text-danger" id="customer_number_w"></p>
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row ">
                             <div class="col ">
                                 <div
-                                    class='file-input d-flex align-items-center justify-content-between position-relative border rounded-1'>
-                                    <input type='file' class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0">
+                                    class='file-input d-flex align-items-center justify-content-between mb-4 position-relative border rounded-1'>
+                                    <input type='file' id="customer_data" class="position-absolute  top-0 bottom-0 start-0 end-0 opacity-0">
                                     <span class='label' data-js-label>Resume</span>
                                     <span class='button'>Browse</span>
                                 </div>
@@ -191,24 +184,21 @@
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row ">
                             <div class="col ">
-                                <textarea placeholder="Your Message" name="career_message"
+                                <textarea placeholder="Your Message" id="customer_message" name="career_message"
                                     class="form-control w-100 field message_field"></textarea>
                             </div>
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button career-form-btn">
                                 <button class="btn2 d-flex align-items-center">
-
                                     <span class="about-btn d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
                                     </span>
-                                    <span class="text"> Submit</span>
-
+                                    <span class="text" onclick="customerdata()"> Submit</span>
                                 </button>
                             </div>
                         </div>
                     </form>
-
                 </div>
                 <div
                     class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-5  d-flex justify-content-center justify-content-sm-start ">
@@ -218,7 +208,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <!-- Form Section End -->
@@ -276,7 +265,6 @@
     </section>
     <!-- Why Choose Us Section End -->
     <section class="section-padding-footer">
-
     </section>
     <!-- Footer start -->
     <footer>
@@ -308,21 +296,23 @@
                                 <h5 class="mb-4 footer_heading">Quick Link</h5>
                                 <ul class="list-group footer-hover">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                      <a href="/" class="link-light text-decoration-none ">Home</a>
+                                        <a href="/" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                      <a href="collections/" class="link-light text-decoration-none">Automotive Products</a>
+                                        <a href="collections/" class="link-light text-decoration-none">Automotive
+                                            Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                      <a href="industrial/" class="link-light text-decoration-none">Industrial Products</a>
+                                        <a href="industrial/" class="link-light text-decoration-none">Industrial
+                                            Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                      <a href="#" class="link-light text-decoration-none">Brochure</a>
+                                        <a href="#" class="link-light text-decoration-none">Brochure</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                      <a href="#" class="link-light text-decoration-none">Gallery</a>
+                                        <a href="#" class="link-light text-decoration-none">Gallery</a>
                                     </li>
-                                  </ul>
+                                </ul>
                             </div>
                             <div class="accordion-item footer-link d-md-none col-12 offset-xl-1  p-0 float-left mb-3">
                                 <h2 class="accordion-header" id="headingTwo1">
@@ -330,13 +320,11 @@
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
                                         type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo1"
                                         aria-expanded="false" aria-controls="collapseTwo1">
-
-                                       <span class="col-12 d-flex justify-content-between">
-                                        <span class="m-0 footer-link-title">Quick Link</span>
-                                        <span class="m-0 footer-link-icon "><i
-                                                class="fa-solid fa-angle-down mt-1 me-5"></i></span>
-                                       </span>
-
+                                        <span class="col-12 d-flex justify-content-between">
+                                            <span class="m-0 footer-link-title">Quick Link</span>
+                                            <span class="m-0 footer-link-icon "><i
+                                                    class="fa-solid fa-angle-down mt-1 me-5"></i></span>
+                                        </span>
                                     </button>
                                 </h2>
                                 <div id="collapseTwo1" class="accordion-collapse collapse" aria-labelledby="headingTwo1"
@@ -352,7 +340,8 @@
                                                     class="link-light text-decoration-none">Automotive Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="#" class="link-light text-decoration-none">Industrial Products</a>
+                                                <a href="#" class="link-light text-decoration-none">Industrial
+                                                    Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -364,7 +353,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-3 col-xl-3 p-0 mb-3 float-left  ">
                                 <h5 class="mb-4 footer_heading">Company</h5>
                                 <ul class="list-group footer-hover">
@@ -384,13 +372,11 @@
                                         class="accordion-button collapsed m-3 d-flex  justify-content-between col-12"
                                         type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo2"
                                         aria-expanded="false" aria-controls="collapseTwo2">
-
-                                       <span class="d-flex justify-content-between col-12">
-                                        <span class="m-0 footer-link-title">Company</span>
-                                        <span class="m-0 footer-link-icon "><i
-                                                class="fa-solid fa-angle-down mt-1 me-5"></i></span>
-                                       </span>
-
+                                        <span class="d-flex justify-content-between col-12">
+                                            <span class="m-0 footer-link-title">Company</span>
+                                            <span class="m-0 footer-link-icon "><i
+                                                    class="fa-solid fa-angle-down mt-1 me-5"></i></span>
+                                        </span>
                                     </button>
                                 </h2>
                                 <div id="collapseTwo2" class="accordion-collapse collapse" aria-labelledby="headingTwo2"
@@ -516,9 +502,31 @@
             }
         });
     </script>
+
+    <script>
+        const customerdata = () => {
+            event.preventDefault()
+            let customer_fname = document.getElementById("customer_first_name").value
+            let customer_lname = document.getElementById("customer_last_name").value
+            let customer_email = document.getElementById("customer_email").value
+            let customer_number = document.getElementById("customer_number").value
+            let customer_data = document.getElementById("customer_data").value
+            let customer_message = document.getElementById("customer_message").value
+
+            if(customer_fname === ""){
+                document.getElementById("customer_fname").innerHTML="Please fill in this field";
+            }
+            if(customer_lname === ""){
+                document.getElementById("customer_lname").innerHTML="Please fill in this field";
+            }
+            if(customer_email === ""){
+                document.getElementById("customer_email_w").innerHTML="Please fill in this field";
+            }
+            if(customer_number === ""){
+                document.getElementById("customer_number_w").innerHTML="Please fill in this field";
+            }
+        }
+    </script>
     <!-- Script end -->
-
-
 </body>
-
 </html>
