--- a/products/index.html
+++ b/products/index.html
@@ -645,8 +645,7 @@
         </div>
         <div class="copy-right-footer col-md-12 position-relative">
             <div class="d-flex justify-content-center align-items-center">
-                <p class="m-0 text-light">© 2024 ECOMAX. All rights reserved</p><a
-                    href="/collections/two-wheeler-engine-oil.html"></a>
+                <p class="m-0 text-light">© 2024 ECOMAX. All rights reserved</p>
             </div>
         </div>
         </footer>
@@ -673,7 +672,7 @@
             $(document).ready(function () {
                 loadJS([
                     "/assets/JS/script.js",
-                    "/assets/JS/db_industrial_all_data.js"
+                    "/assets/JS/db.js"
                 ]);
 
                 const collectionThumbHTML = ({ url, img, title }) =>
